--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <script>
   function redirectToURL() {
     // Define the URLs for desktop and mobile
-    var desktopURL = "https://wabi-sabi.rootmud.xyz/?template=15090&data=15091";
-    var mobileURL = "https://wabi-sabi.rootmud.xyz/?template=15102&data=15091";
+    var desktopURL = "https://arweave.net/uip2I3tKf2tJgwhetEfQ8HJ2blPMi01mpOhQb146-bc/";
+    var mobileURL = "https://arweave.net/uip2I3tKf2tJgwhetEfQ8HJ2blPMi01mpOhQb146-bc/";
 
     // Check if the user's device is mobile
     if (/Mobi|Android/i.test(navigator.userAgent)) {
